--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "trl>=0.7.0",
     "peft>=0.6.0",
     "bitsandbytes>=0.39.0",
+    "deepspeed>=0.9.0",
+    "flash-attn>=0.3.0",
     
     # Utilities
     "numpy>=1.21.0",
