--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "bitsandbytes>=0.39.0",
     "deepspeed>=0.9.0",
     "flash-attn>=0.3.0",
+    "tensorboard>=2.10.0",
+    "mpi4py>=3.1.0",
     
     # Utilities
     "numpy>=1.21.0",
