--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     
     # Training dependencies
     "trl>=0.7.0",
+    "trl[vllm]>=0.7.0",
     "peft>=0.6.0",
     "bitsandbytes>=0.39.0",
     "deepspeed>=0.9.0",
